--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "should": "^5.2.0",
     "mocha": "^2.1.0",
     "express": "^4.12.2",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "express-session": "^1.10.3",
+    "cookie-parser": "^1.3.4"
   }
 }
